User path.of instead of paths.get